fix msvc build (#14)

--- a/sqlite-vec.h.tmpl
+++ b/sqlite-vec.h.tmpl
@@ -11,8 +11,15 @@
 extern "C" {
 #endif
 
+#ifdef _WIN32
+__declspec(dllexport)
+#endif
 int sqlite3_vec_init(sqlite3 *db, char **pzErrMsg,
                   const sqlite3_api_routines *pApi);
+
+#ifdef _WIN32
+__declspec(dllexport)
+#endif
 int sqlite3_vec_fs_read_init(sqlite3 *db, char **pzErrMsg,
                           const sqlite3_api_routines *pApi);
 
