--- a/site/.vitepress/theme/style.css
+++ b/site/.vitepress/theme/style.css
@@ -1,3 +1,21 @@
+/*@import "https://code.cdn.mozilla.net/fonts/zilla-slab.css";*/
+
+@font-face {
+  font-family: "ZillaSlab-SemiBold";
+  src: url("/fonts/ZillaSlab-SemiBold.woff");
+  src: url("/fonts/ZillaSlab-SemiBold.woff2") format("woff2"),
+    url("/fonts/ZillaSlab-SemiBold.woff") format("woff"),
+    url("/fonts/ZillaSlab(-SemiBold).otf") format("opentype"),
+    url("/fonts/ZillaSlab-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+.VPHero h1,
+.VPNavBarTitle .title {
+  font-family: "ZillaSlab-SemiBold";
+  font-size: 1.5rem;
+}
 /**
  * Customize default theme styling by overriding CSS variables:
  * https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
@@ -68,6 +86,17 @@
   --vp-c-danger-2: var(--vp-c-red-2);
   --vp-c-danger-3: var(--vp-c-red-3);
   --vp-c-danger-soft: var(--vp-c-red-soft);
+
+  --vp-c-brand-1x: #a6d189;
+  --vp-c-brand-1x: #a6da95;
+  --vp-c-brand-1x: #a6e3a1;
+}
+
+:root {
+  --vp-c-brand-1: #1e66f5;
+}
+.dark {
+  --vp-c-brand-1: #89b4fa;
 }
 
 /**
@@ -92,19 +121,20 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    #f5c2e7 30%,
-    #94e2d5 /*#bd34fe 30%,
-    #41d1ff*/
-  );
+  --vp-home-hero-name-background: black;
 
+  /*
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe 50%,
     #47caff 50%
   );
   --vp-home-hero-image-filter: blur(44px);
+  */
+}
+
+.dark {
+  --vp-home-hero-name-background: white;
 }
 
 @media (min-width: 640px) {
