--- a/site/.vitepress/theme/style.css
+++ b/site/.vitepress/theme/style.css
@@ -149,6 +149,12 @@
   }
 }
 
+.VPContent.is-home .language-sqlite {
+  max-width: 640px;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+
 /**
  * Component: Custom Block
  * -------------------------------------------------------------------------- */
